chore: formalize entity inheritance rules